--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             工作时间：2015/7 ~ 2016/5 <br/>
             担任职位：ui设计/视觉设计
           </p>
-          <p><t>北京XXX科技有限公司</t><br/>
+          <p><t>北京益阳科技有限公司</t><br/>
             工作时间：2016/9 ~ 2017/5 <br/>
             担任职位：前端工程师
           </p>
